--- a/style.css
+++ b/style.css
@@ -1,143 +1,154 @@
-
-
 * {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
+.btn-box {
+    display: none !important;
+    gap: 1rem;
+}
 
+.nav-bar-list ul {
+    display: none !important;
+}
 
+.card-service-1 {
+    background: url(image/b0abff1d-a3f9-49a7-9d58-273bbc735561.jpg);
+    height: 300px;
+    background-size: contain;
+}
+
+.card-service-1 button {
+    filter: none;
+}
 
 .headear-alignment {
     display: flex;
     justify-content: space-evenly;
     /* background-color: lightgray; */
     align-items: baseline;
+
+}
+
+
+.d-block {
+    position: relative;
+    right: 220px;
 }
 
 nav {
-
+    border-bottom: 1px solid lightgray;
 }
-
-.contanier {
-    display: flex;
-    /* width: 100%; */
-    align-items: baseline;
-    justify-content: space-around;
-
-
-
-}
-
-.logo-alignment {
-    /* margin-top: 20px; */
-
-}
-
-.logo-alignment>img {
-    width: 160px;
-    margin-top: px;
-}
-
-
-.nav-bar-list {
-    display: flex;
-    /* gap: 20px; */
-
-    
-}
-
 
 .nav-bar-list>ul {
-    gap: 20px;
+    gap: 10px;
     display: flex;
-    
+    align-items: center;
+
+
 }
 
 .nav-bar-list>ul>li {
     list-style-type: none;
-    
 
 }
 
 .nav-bar-list>ul>li>a {
     text-decoration: none;
     color: #0d6db7;
+    font-size: 1rem;
+
 }
 
 
 .nav-bar-list>ul>li>a:hover {
 
-    text-decoration: underline 3px #8dc63f ;
+    text-decoration: underline 3px #8dc63f;
 }
 
 .btn-contanier>button {
-    padding: 0.3em 0.3em;
-    border-radius: 5px;
-    transition: transform 0.25s;
-    background-color: #8dc63f;
-    color: white;
-
-
- 
+    padding: 0.2em 0.2em;
+    transition: transform 0.30s;
+    margin-left: 20px;
 }
 
+.top-5 {
+    top: 10px;
+}
 
-    
+.banner-img {
+    display: none !important;
+}
+
+.text-green {
+    color: #8dc63f !important;
+}
+
+.bg-green {
+    background-color: #f0fcdb !important;
+}
+
+.bg-green-dark {
+    background-color: #8dc63f !important;
+}
+
+.bg-grey {
+    background-color: #424242;
+}
+
 
 .btn-contanier>button:hover {
-    transform: scale(1.4, 1.4);
-    
-
-
-
-
-    
-}
-
-.Donate-btn {
-    /* font-size: 16px; */
-    background-color: #0d6db7;
-
+    transform: scale(1.1, 1.1);
 
 }
 
-.sponesor-btn {
-    background-color: #8dc63f;
+
+.section-alignment {
+    width: 100%;
+
 }
+
+.head-content {
+    width: 40%;
+    position: relative;
+
+}
+
+.saylani-section-img>img {
+    width: 70%;
+    position: relative;
+    left: 50px;
+}
+
+
 
 .saylani-section {
-    /* display: flex; */
+    display: flex;
+    position: relative;
+    left: 40px;
+
+}
+
+
+.saylani-section {
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
-    /* background-color: #cfcdcd; */
     align-items: center;
 
 }
 
-.h1 {
-    color: #0d6db7;
+
+@media screen and (min-width:600px) {
+    .nav-bar-list ul {
+        display: flex !important;
+    }
+
+    .btn-box {
+        display: flex !important;
+    }
+
+    .banner-img {
+        display: block !important;
+    }
 }
-
- 
-.saylani-section-img>img {
-    /* width: ; */
-}
-
-
-.SALYANI {
-    color: #8dc63f;
-}
-
-.SMIT {
-    color: #0d6db7;
-
-}
-
- 
-.social-media {
-
-}
-
-
-.col
